Fixed Whitespace Error
Fixed the whitespace error, but something should be filled into the background, or we should move it on top the video.

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -369,3 +369,8 @@ footer {
 #list-vehicles {
   padding: 10px;
 }
+
+.Landing-Text {
+    padding-top: 100px;
+    padding-bottom:  1px;
+}
